<resources>
    <string name="app_name">Call Spam Blocker</string>
    <string name="search">Search</string>
    <string name="contacts">Contacts</string>
    <string name="setting">Setting</string>
    <string name="blocked">Blocked List</string>
    <string name="night_mode">Night</string>
    <string name="light_mode">"Light "</string>
    <string name="language">Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_number">Search Phone Number</string>
    <string name="view_mode">View mode</string>
    <array name="en_language_list">
        <item>English</item>
        <item>Vietnamese</item>
    </array>
    <array name="vn_language_list">
        <item>Tiếng Anh</item>
        <item>Tiếng Việt</item>
    </array>
    <array name="language_shortname">
        <item>EN</item>
        <item>VN</item>
    </array>
    <string name="recently_searched">Recently Searched</string>
    <string name="clear_history">Clear History</string>
    <string name="update_database">Update Spammer Database</string>
    <string name="filter_contacts">Filter your contact list</string>
    <string name="report_number">Report Number</string>
    <string name="blocked_number">Block number</string>
    <string name="filter_blocked_number">Filter your blocked number</string>
</resources>